sdk-docs_versioned_docs/version-19.0.0/enums/Types/ExtrinsicsOrderBy/ExtrinsicsOrderBy.md
---
id: "ExtrinsicsOrderBy"
title: "Enumeration: ExtrinsicsOrderBy"
sidebar_label: "ExtrinsicsOrderBy"
---

[types](../../../modules/Types/Types.md).ExtrinsicsOrderBy

Methods to use when ordering `Extrinsic`.

## Enumeration Members

### AddressAsc

• **AddressAsc** = ``"ADDRESS_ASC"``

#### Defined in

[middleware/typesV2.ts:16567](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16567)

___

### AddressDesc

• **AddressDesc** = ``"ADDRESS_DESC"``

#### Defined in

[middleware/typesV2.ts:16568](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16568)

___

### BlockIdAsc

• **BlockIdAsc** = ``"BLOCK_ID_ASC"``

#### Defined in

[middleware/typesV2.ts:16569](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16569)

___

### BlockIdDesc

• **BlockIdDesc** = ``"BLOCK_ID_DESC"``

#### Defined in

[middleware/typesV2.ts:16570](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16570)

___

### CallIdAsc

• **CallIdAsc** = ``"CALL_ID_ASC"``

#### Defined in

[middleware/typesV2.ts:16571](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16571)

___

### CallIdDesc

• **CallIdDesc** = ``"CALL_ID_DESC"``

#### Defined in

[middleware/typesV2.ts:16572](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16572)

___

### CreatedAtAsc

• **CreatedAtAsc** = ``"CREATED_AT_ASC"``

#### Defined in

[middleware/typesV2.ts:16573](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16573)

___

### CreatedAtDesc

• **CreatedAtDesc** = ``"CREATED_AT_DESC"``

#### Defined in

[middleware/typesV2.ts:16574](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16574)

___

### ExtrinsicHashAsc

• **ExtrinsicHashAsc** = ``"EXTRINSIC_HASH_ASC"``

#### Defined in

[middleware/typesV2.ts:16575](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16575)

___

### ExtrinsicHashDesc

• **ExtrinsicHashDesc** = ``"EXTRINSIC_HASH_DESC"``

#### Defined in

[middleware/typesV2.ts:16576](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16576)

___

### ExtrinsicIdxAsc

• **ExtrinsicIdxAsc** = ``"EXTRINSIC_IDX_ASC"``

#### Defined in

[middleware/typesV2.ts:16577](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16577)

___

### ExtrinsicIdxDesc

• **ExtrinsicIdxDesc** = ``"EXTRINSIC_IDX_DESC"``

#### Defined in

[middleware/typesV2.ts:16578](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16578)

___

### ExtrinsicLengthAsc

• **ExtrinsicLengthAsc** = ``"EXTRINSIC_LENGTH_ASC"``

#### Defined in

[middleware/typesV2.ts:16579](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16579)

___

### ExtrinsicLengthDesc

• **ExtrinsicLengthDesc** = ``"EXTRINSIC_LENGTH_DESC"``

#### Defined in

[middleware/typesV2.ts:16580](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16580)

___

### IdAsc

• **IdAsc** = ``"ID_ASC"``

#### Defined in

[middleware/typesV2.ts:16581](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16581)

___

### IdDesc

• **IdDesc** = ``"ID_DESC"``

#### Defined in

[middleware/typesV2.ts:16582](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16582)

___

### ModuleIdAsc

• **ModuleIdAsc** = ``"MODULE_ID_ASC"``

#### Defined in

[middleware/typesV2.ts:16583](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16583)

___

### ModuleIdDesc

• **ModuleIdDesc** = ``"MODULE_ID_DESC"``

#### Defined in

[middleware/typesV2.ts:16584](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16584)

___

### Natural

• **Natural** = ``"NATURAL"``

#### Defined in

[middleware/typesV2.ts:16585](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16585)

___

### NonceAsc

• **NonceAsc** = ``"NONCE_ASC"``

#### Defined in

[middleware/typesV2.ts:16586](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16586)

___

### NonceDesc

• **NonceDesc** = ``"NONCE_DESC"``

#### Defined in

[middleware/typesV2.ts:16587](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16587)

___

### ParamsAsc

• **ParamsAsc** = ``"PARAMS_ASC"``

#### Defined in

[middleware/typesV2.ts:16588](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16588)

___

### ParamsDesc

• **ParamsDesc** = ``"PARAMS_DESC"``

#### Defined in

[middleware/typesV2.ts:16589](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16589)

___

### ParamsTxtAsc

• **ParamsTxtAsc** = ``"PARAMS_TXT_ASC"``

#### Defined in

[middleware/typesV2.ts:16590](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16590)

___

### ParamsTxtDesc

• **ParamsTxtDesc** = ``"PARAMS_TXT_DESC"``

#### Defined in

[middleware/typesV2.ts:16591](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16591)

___

### PrimaryKeyAsc

• **PrimaryKeyAsc** = ``"PRIMARY_KEY_ASC"``

#### Defined in

[middleware/typesV2.ts:16592](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16592)

___

### PrimaryKeyDesc

• **PrimaryKeyDesc** = ``"PRIMARY_KEY_DESC"``

#### Defined in

[middleware/typesV2.ts:16593](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16593)

___

### SignedAsc

• **SignedAsc** = ``"SIGNED_ASC"``

#### Defined in

[middleware/typesV2.ts:16596](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16596)

___

### SignedDesc

• **SignedDesc** = ``"SIGNED_DESC"``

#### Defined in

[middleware/typesV2.ts:16597](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16597)

___

### SignedbyAddressAsc

• **SignedbyAddressAsc** = ``"SIGNEDBY_ADDRESS_ASC"``

#### Defined in

[middleware/typesV2.ts:16594](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16594)

___

### SignedbyAddressDesc

• **SignedbyAddressDesc** = ``"SIGNEDBY_ADDRESS_DESC"``

#### Defined in

[middleware/typesV2.ts:16595](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16595)

___

### SpecVersionIdAsc

• **SpecVersionIdAsc** = ``"SPEC_VERSION_ID_ASC"``

#### Defined in

[middleware/typesV2.ts:16598](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16598)

___

### SpecVersionIdDesc

• **SpecVersionIdDesc** = ``"SPEC_VERSION_ID_DESC"``

#### Defined in

[middleware/typesV2.ts:16599](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16599)

___

### SuccessAsc

• **SuccessAsc** = ``"SUCCESS_ASC"``

#### Defined in

[middleware/typesV2.ts:16600](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16600)

___

### SuccessDesc

• **SuccessDesc** = ``"SUCCESS_DESC"``

#### Defined in

[middleware/typesV2.ts:16601](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16601)

___

### UpdatedAtAsc

• **UpdatedAtAsc** = ``"UPDATED_AT_ASC"``

#### Defined in

[middleware/typesV2.ts:16602](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16602)

___

### UpdatedAtDesc

• **UpdatedAtDesc** = ``"UPDATED_AT_DESC"``

#### Defined in

[middleware/typesV2.ts:16603](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L16603)
